<resources>
    <string name="app_name">Tp4</string>
    <!-- Strings used for fragments for navigation -->
    <string name="button_tp1">TP 1</string>
    <string name="button_tp4">TP 4</string>

    <!-- TP 4 -->
    <string name="contact_name_hint">Contact Name</string>
    <string name="contact_name_label">Name </string>

    <string name="contact_phone_hint">Contact Phone</string>
    <string name="contact_phone_label">Phone </string>

    <string name="button_call">Add Call</string>

    <!-- TP 1 -->
    <string name="name_title">Your Name</string>
    <string name="name_label">Name </string>
    <string name="name_hint">Your Name Here</string>

    <string name="surname_title">Your Surname</string>
    <string name="surname_label">Surname </string>
    <string name="surname_hint">Your Surname Here</string>

    <string name="address_title">Your Address</string>
    <string name="address_label">Address </string>
    <string name="address_hint">Your Address Here</string>

    <string name="button_confirm">Confirm</string>


</resources>